--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "auth0",
-  "version": "1.0.0",
-  "description": "",
+  "name": "power-bank",
+  "version": "1.0.2",
+  "description": "A simple app to track BTC cloud mining results and profits",
   "main": "index.js",
   "scripts": {
     "dev": "next",
@@ -12,12 +12,28 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "auth0-js": "^9.4.2",
-    "isomorphic-unfetch": "^2.0.0",
+    "@material-ui/core": "^3.9.2",
+    "auth0-js": "^9.10.0",
+    "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
+    "cheerio": "^1.0.0-rc.2",
+    "express": "^4.16.4",
+    "fetch": "^1.1.0",
+    "isomorphic-unfetch": "^3.0.0",
     "js-cookie": "^2.2.0",
-    "jsonwebtoken": "^8.2.1",
+    "jsonwebtoken": "^8.5.0",
+    "lodash": "^4.17.11",
+    "morgan": "^1.9.1",
+    "namor": "^1.1.1",
+    "net": "^1.0.2",
     "next": "^5.1.0",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "react": "^16.8.3",
+    "react-bootstrap": "^1.0.0-beta.5",
+    "react-bootstrap-table": "^4.3.1",
+    "react-dom": "^16.8.3",
+    "react-number-format": "^4.0.6",
+    "react-table": "^6.9.2",
+    "request": "^2.88.0",
+    "tls": "0.0.1"
   }
 }
