--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^16.8.3",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-bootstrap-table": "^4.3.1",
+    "react-bootstrap-table-next": "^3.0.2",
     "react-dom": "^16.8.3",
     "react-number-format": "^4.0.6",
     "react-table": "^6.9.2",
